...
    onNotificacionesClick: () -> Unit = {},
    onAjustesClick: () -> Unit = {},
    onSuscripcionClick: () -> Unit = {},
    onChatListClick: () -> Unit = {},
    onUserClick: (String) -> Unit = {},
    onNotifInboxClick: () -> Unit = {},
    modifier: Modifier = Modifier.testTag("profileScreen")
) {


       val state by configViewModel.uiState.collectAsState()


...
